# python-object-watchdog

./: LICENSE  MANIFEST.in  README.rst  setup.cfg
.github/workflows/: upload-to-pypi.yml
examples/: callback_by_definition.py  global_callback.py  simple_watch_object.py  update_caches_after_modify.py
object_watchdog/: __init__.py  demo.py  watchdog.py
