[metadata]
name = object-watchdog
version = attr: object_watchdog.__version__
description = Watch Python object for changes in runtime and launch callbacks
long_description = file: README.rst, TODO.rst, CHANGELOG.rst
keywords = monitor, watchdog, metaclass
license = License :: OSI Approved :: BSD License
classifiers =
  Programming Language :: Python :: 3.6
  Programming Language :: Python :: 3.7
  Programming Language :: Python :: 3.8
  Programming Language :: Python :: Implementation :: PyPy
authors = Daniel Garcia (cr0hn)
authors_email = cr0hn@cr0hn.com
url = https://github.com/cr0hn/object-watchdog

[options]
zip_safe = False
include_package_data = True
packages = find:
